opam-version: "2.0"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
license: "GPL-3.0-only"
homepage: "https://github.com/tsudalab/ACP4"
bug-reports: "https://github.com/UnixJunkie/ACP4/issues"
build: ["dune" "build" "-p" name "-j" jobs]
install: [
  ["cp" "bin/acp4_ph4.py" "%{bin}%/acp4_ph4.py"]
]
depends: [
  "batteries"
  "bst"
  "dolog"
  "dune" {>= "1.11"}
  "line_oriented"
  "minicli"
  "ocaml"
  "parany"
  "vector3"
  "cpm" {>= "12.2.0"} # needs MakeROC.fast_power_metric_a
]
depopts: [
  "conf-gnuplot" # ROC curves will not show if not present
  "conf-rdkit"   # the python script will not work if not present
]
synopsis: "ACP4: AutoCorrelation of Pharmacophore Features"
