;; installed executables / public targets

; (executables
;   (names acp4 scissors)
;   (public_names acp4 acp4_scissors)
;   (modules ph4 acp4 gnuplot common sdf_3D scissors)
;   (libraries batteries dolog minicli parany vector3 line_oriented cpm bst))

(executables
  (names acp4 scissors MST assign)
  (public_names acp4 acp4_scissors acp4_mst acp4_assign)
  (modules ph4 acp4 gnuplot common sdf_3D scissors MST assign)
  (libraries batteries dolog minicli parany vector3 line_oriented cpm bst ocamlgraph molenc))
